--- a/source/partials/_header.haml
+++ b/source/partials/_header.haml
@@ -17,8 +17,11 @@
             %a#instagram-link{href:"http://flavialarocca.com#instagram-feed"}
               instagram
           %li
-            %a#preview-link.red{href:"/shop/list.html"}
-              <strong>temp shop</strong>
+            %a#preview-link{href:"/shop/list.html"}
+              temp shop
           %li
             %a#stores-link{href:"/stores.html"}
               stores
+          %li
+            %a#presskit-link{href:"/pesskit.html"}
+              press kit
