--- a/source/presskit.html.haml
+++ b/source/presskit.html.haml
@@ -1,55 +1,124 @@
 .page
   = partial "partials/header"
-
-
-
   #shop-list
-    #stripesmania-list
+    #ss-list
       %h2.title
         %a{href: "#"}
           %span
             SPRING-SUMMER 2014
-
-
       .list
-        %div
-          = image_tag "presskit/lowres/small_lowfi/flavialaroccaSS14_1.jpg", :"data-src" => "../img/shop/list/small/flavialaroccaSS14_1.jpg"
 
         %div
-          = image_tag "shop/list/small_lowfi/small_gonna_righe_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_righe_arancio.jpg"
+          = image_tag "presskit/lowres/flavialaroccaSS14_02.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_02.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_03.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_03.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_04.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_04.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_05.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_05.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_06.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_06.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_07.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_07.jpg"
 
         %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_09.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_09.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_10.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_10.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_11.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_11.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_12.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_12.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_13.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_13.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_14.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_14.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_15.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_15.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_16.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_16.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_17.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_17.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_18.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_18.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_19.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_19.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_20.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_20.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_21.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_21.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_22.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_22.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_23.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_23.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_24.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_24.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_25.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_25.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_26.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_26.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_27.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_27.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_28.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_28.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_29.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_29.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_30.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_30.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_31.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_31.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_32.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_32.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_33.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_33.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_34.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_34.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_35.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_35.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_36.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_36.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_37.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_37.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_38.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_38.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_39.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_39.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_40.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_40.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_41.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_41.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_42.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_42.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_43.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_43.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_44.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_44.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_45.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_45.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_46.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_46.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_47.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_47.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_48.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_48.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_49.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_49.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_50.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_50.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_51.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_51.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_52.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_52.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_53.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_53.jpg"
+        %div
+          = image_tag "presskit/lowres/flavialaroccaSS14_54.jpg", :"data-src" => "../img/presskit/small/flavialaroccaSS14_54.jpg"
 
-          = image_tag "shop/list/small_lowfi/small_gonna_verde_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_verde.jpg"
-        %div
-
-          = image_tag "shop/list/small_lowfi/small_gonnalunga_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonnalunga_arancio.jpg"
-        %div
-
-          = image_tag "shop/list/small_lowfi/small_gonnamini_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonnamini_arancio.jpg"
-        %div
-          = image_tag "shop/list/small_lowfi/small_top_nero_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_top_nero.jpg"
-        %div
-          = image_tag "shop/list/small_lowfi/small_milla_bianco_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_bianco.jpg"
-        %div
-          = image_tag "shop/list/small_lowfi/small_milla_dot_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_dot.jpg"
-        %div
-          = image_tag "shop/list/small_lowfi/small_milla_fucsia_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_fucsia.jpg"
-        %div
-          = image_tag "shop/list/small_lowfi/small_milla_jeans_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_jeans.jpg"
-        %div
-          = image_tag "shop/list/small_lowfi/small_milla_popeline_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_popeline.jpg"
-        %div
-          = image_tag "shop/list/small_lowfi/small_milla_vichy_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_vichy.jpg"
-        %div
-          = image_tag "shop/list/small_lowfi/small_mini_bianca_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_mini_bianca.jpg"
-        %div
-          = image_tag "shop/list/small_lowfi/small_gonna_bianca_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_bianca.jpg"
-        %div
-          = image_tag "shop/list/small_lowfi/small_gonna_blu_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_blu.jpg"
-        %div
-          = image_tag "shop/list/small_lowfi/small_gonna_nera_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_nera.jpg"
-
+      .center
+        %a.button.download{:href=>"http://flavialarocca.com/presskit/FLAVIALAROCCA_PRESSKIT.zip"}
+          %span
+            download the high res press kit
+          %i.fa.fa-cloud-download
   = partial "partials/footer"
 
 
