--- a/source/layouts/html5.haml
+++ b/source/layouts/html5.haml
@@ -7,7 +7,7 @@
 		%meta{:charset => "utf-8"}
 		%meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
 		-# To set titles and descriptions globally and for each individual page, see /DOCS.md
-		%title flavialarocca coming soon
+		%title flavialarocca official website
 		%meta{:content => "We are crafting a completely new exciting website and digital image to enhance the value of the upcoming collection. In the meanwhile follow us on", :name => "description"}
 		%meta{:content => "width=device-width, initial-scale=1, maximum-scale=1", :name => "viewport"}
 		%meta{:content => "yes", :name =>"apple-mobile-web-app-capable"}
