presskit + main menu changes + fontawesome updated + new presskit images

--- a/source/partials/_header.haml
+++ b/source/partials/_header.haml
@@ -23,5 +23,5 @@
             %a#stores-link{href:"/stores.html"}
               stores
           %li
-            %a#presskit-link{href:"/pesskit.html"}
+            %a#presskit-link{href:"/presskit.html"}
               press kit
