press gallery + press page + collections + fw13

--- a/source/partials/_header.haml
+++ b/source/partials/_header.haml
@@ -23,5 +23,5 @@
             %a#stores-link{href:"/stores.html"}
               stores
           %li
-            %a#presskit-link{href:"/presskit.html"}
+            %a#presskit-link{href:"/presskit/presskit.html"}
               press kit
