--- a/source/css/site.css.sass
+++ b/source/css/site.css.sass
@@ -23,6 +23,8 @@ $legacy-support-for-ie: true
 @import partials/960
 @import partials/1280
 
+@import vendor/jquery.fancybox
+
 body
 	-webkit-font-smoothing: antialiased
 	-webkit-overflow-scrolling: touch
