--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -25,6 +25,10 @@ $light_blue: #CCF1F2
 #shop-list
   margin-top: 40px
   +span-columns(7,7)
+  #fw-list
+    +span-columns(7,7)
+    background-color: $giallo
+    margin-left: 0
   #ss-list
     +span-columns(7,7)
     background-color: $light-blue
