--- a/source/newsletters/tsp_1.html.haml
+++ b/source/newsletters/tsp_1.html.haml
@@ -43,7 +43,7 @@
                 = image_tag "logo.png" ,:class=>"logo"
             %tr{"width"=>"750", :valign=>"top"}
               %td.story
-                = image_tag "newsletter_flr_TSP"
+                = image_tag "newsletter_flr_TSP.png"
                 %p.description
                   THE STYLE PUSHER presenta FLAVIALAROCCA <br /> <br />
                   Sabato 9 Ottobre 2013 <br />
