--- a/source/newsletters/tsp_1.html.haml
+++ b/source/newsletters/tsp_1.html.haml
@@ -29,7 +29,7 @@
             %tr{"width"=>"750", :valign=>"top"}
               %td
                 %p.web
-                  %a{:href=>"http://flavialarocca.com/newsletters/pressday2013_1.html?utm_source=newsletter1013&utm_medium=email&utm_campaign=pressday1013"}
+                  %a{:href=>"http://flavialarocca.com/newsletters/tsp_1.html?utm_source=newsletter1113&utm_medium=email&utm_campaign=tps1113"}
                     Can't read this email? Click here to view it online
             %tr{"width"=>"750", :valign=>"top"}
               %td
@@ -43,7 +43,7 @@
                 = image_tag "logo.png" ,:class=>"logo"
             %tr{"width"=>"750", :valign=>"top"}
               %td.story
-                = image_tag "newsletter_flr-07.png"
+                = image_tag "newsletter_flr_TSP.png"
                 %p.description
                   THE STYLE PUSHER presenta FLAVIALAROCCA <br /> <br />
                   Sabato 9 Ottobre 2013 <br />
@@ -56,5 +56,5 @@
 
             %tr{"width"=>"750", :valign=>"top"}
               %td.story
-                %a.button{:href=>"http://flavialarocca.com?utm_source=newsletter1013&utm_medium=email&utm_campaign=pressday1013"}
+                %a.button{:href=>"http://flavialarocca.com?utm_source=newsletter1113&utm_medium=email&utm_campaign=tps1113"}
                   CHECK THE NEW WEBSITE
