--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -13,7 +13,6 @@ $light_blue: #CCF1F2
   +container($total-columns, $break-1, $break-2,$break-3)
 
 #banner
-  background-color: $light-blue
   +span-columns(7,7)
   img
     margin: 0 auto
@@ -57,6 +56,10 @@ $light_blue: #CCF1F2
     +span-columns(7,7)
     & > div
       margin: 10px
+    p.desc
+      color: $viola
+      text-align: center
+      margin: 0
     .info
 
       color: $viola
