--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,6 +1,6 @@
 .page
   = partial "partials/header"
-
+  = partial "partials/banner"
   = partial "partials/collection-gallery"
   = partial "partials/share"
   #video-container
