--- a/source/partials/_banner.haml
+++ b/source/partials/_banner.haml
@@ -1,3 +1,3 @@
 #banner
-  %a{href: "/shop/list.html"}
-    = image_tag "summersale/banner-14.png" , :alt => "Summer Spacial Sales 3rd October"
+  %a{href: "/shop/fw13-list.html"}
+    = image_tag "collections/banner-15.png" , :alt => "Fall/Winter 2013 Shop"
