--- a/source/partials/_collection-gallery.haml
+++ b/source/partials/_collection-gallery.haml
@@ -2,7 +2,8 @@
   %h2.title
     %a{href: "/collections/fw13.html"}
       %span
-        FW13-14
+        Fall/Winter <br />
+        2013-2014
   .color-box
     %a{href: "/collections/fw13.html", target: "_blank"}
       .photos
