--- a/source/shop/fw1314/2-piece-top-jchiaro-collov.html.haml
+++ b/source/shop/fw1314/2-piece-top-jchiaro-collov.html.haml
@@ -7,29 +7,32 @@
     %div.right
       %h1.title
         %span
-          2-piece mini dress/top
+          2-piece top with detachable collar
       %h2.price
         %span{:style=>"font-size: 24px"}
-          287€
+          312,50€
 
       %h2.description
         Description
       %p
-        Two-piece mini black dress/top with detachable cream collar. The dress comprises an upper part (which can be worn separately as a top, with or without the collar) and a bottom part (to wear combined with the upper part only)
+        Two-piece pale jacquard top. The top comprises an upper part (which can be worn separately, with or without the collar) and a single black waist-band at the bottom (to wear combined with the upper part only)
       %h2.composition
         Size
       %p
         X-Small <b />
+        Small
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        100% polyester <b />
-        Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
+        Top: 34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose.
+        Collar: 100% wool  <b />
+        Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry.
       %h2.availability
         Availability
       %p
-        2 Pieces
+        1 Piece X-Small <b />
+        2 Pieces Small
       %h2.shipping
         Shipping
       %p
