--- a/source/shop/fw1314/3-piece-skirt-dark.html.haml
+++ b/source/shop/fw1314/3-piece-skirt-dark.html.haml
@@ -7,30 +7,31 @@
     %div.right
       %h1.title
         %span
-          2-piece jacket with detachable hood
+          3-piece skirt
       %h2.price
         %span{:style=>"font-size: 24px"}
-          515€
+          487,50€
 
       %h2.description
         Description
       %p
-        Two-piece dark jacquard jacket. The jacket comprises an upper part (which can be worn separately as a waistcoat) and a single black waist-band at the bottom-end (to wear combined with the upper part only) - plus removable hood. The windbreaker features a concealed button front and a drawstring hemline
+        Dark jacquard long skirt. It comprises three different pieces which can be worn in four different ways: 1/ as a mini skirt, keeping the upper part only; 2/ as a two different midi skirt, keeping the upper and medium or the lower parts; 3/ as a long skirt just above the ankles, keeping all three pieces together
       %h2.composition
         Size
       %p
-        X-Small <b />
+        Small <b />
+        Medium
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        Jacket: 34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose.
-        Hood: 100% PVC <b />
-        Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry.
+        34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose<b />
+        Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
       %p
-        1 Piece
+        1 Piece Small <b />
+        1 Piece Medium
       %h2.shipping
         Shipping
       %p
