--- a/source/shop/fw1314/overall-black.html.haml
+++ b/source/shop/fw1314/overall-black.html.haml
@@ -7,30 +7,31 @@
     %div.right
       %h1.title
         %span
-          2-piece top with detachable collar
+          2-piece overalls/trousers
       %h2.price
         %span{:style=>"font-size: 24px"}
-          312,50€
+          260€
 
       %h2.description
         Description
       %p
-        Two-piece pale jacquard top. The top comprises an upper part (which can be worn separately, with or without the collar) and a single black waist-band at the bottom (to wear combined with the upper part only)
+        Two-piece black overalls comprising a regular v-neck top and striped regular-waist trousers with a wide-cut leg. The top and the trousers are two separate pieces which can be worn both separately and combined into one dungarees
       %h2.composition
         Size
       %p
         X-Small <b />
+        Small <b />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        Top: 34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose.
-        Collar: 100% wool  <b />
-        Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry.
+        50% acrylic; 50% viscose <b />
+        Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
       %p
-        1 Piece
+        2 Pieces X-Small <b />
+        1 Piece Small
       %h2.shipping
         Shipping
       %p
