--- a/source/shop/fw1314/2-piece-jacket-hood.html.haml
+++ b/source/shop/fw1314/2-piece-jacket-hood.html.haml
@@ -7,29 +7,33 @@
     %div.right
       %h1.title
         %span
-          2-piece overalls/trousers
+          2-piece jacket with detachable hood
       %h2.price
         %span{:style=>"font-size: 24px"}
-          260€
+          515€
 
       %h2.description
         Description
       %p
-        Two-piece black overalls comprising a regular v-neck top and striped regular-waist trousers with a wide-cut leg. The top and the trousers are two separate pieces which can be worn both separately and combined into one dungarees
+        Two-piece dark jacquard jacket. The jacket comprises an upper part (which can be worn separately as a waistcoat) and a single black waist-band at the bottom-end (to wear combined with the upper part only) - plus removable hood. The windbreaker features a concealed button front and a drawstring hemline
       %h2.composition
         Size
       %p
-        X-Small <b />
+        Small <b />
+        X-Small
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        50% acrylic; 50% viscose <b />
-        Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
+        Jacket: 34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose.
+        Hood: 100% PVC <b />
+        Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry.
       %h2.availability
         Availability
       %p
-        2 Pieces
+        1 Piece Small <b />
+        1 Piece X-Sall
+
       %h2.shipping
         Shipping
       %p
