--- a/source/shop/fw1314/2-piece-minidress.html.haml
+++ b/source/shop/fw1314/2-piece-minidress.html.haml
@@ -7,30 +7,31 @@
     %div.right
       %h1.title
         %span
-          Double-faced hooded parka
+          2-piece mini dress/top
       %h2.price
         %span{:style=>"font-size: 24px"}
-          487,50€
+          287€
 
       %h2.description
         Description
       %p
-        This reversible parka consists of an exterior pale jacquard face and an interior light blue face in PVC. It features a large hood in light blue PVC, a drawstring waist and hem, and two hip pockets
+        Two-piece mini black dress/top with detachable cream collar. The dress comprises an upper part (which can be worn separately as a top, with or without the collar) and a bottom part (to wear combined with the upper part only)
       %h2.composition
         Size
       %p
         Small <b />
+        X-Small
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        Exterior: 34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose.
-        Interior and hood: 100% PVC <b />
+        100% polyester <b />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
       %p
-        1 Piece
+        1 Piece Small  <b />
+        1 Piece X-Small
       %h2.shipping
         Shipping
       %p
