--- a/source/shop/fw1314/2-piece-skirt-pale.html.haml
+++ b/source/shop/fw1314/2-piece-skirt-pale.html.haml
@@ -7,29 +7,31 @@
     %div.right
       %h1.title
         %span
-          3-piece skirt
+          2-piece skirt
       %h2.price
         %span{:style=>"font-size: 24px"}
-          487,50€
+          287,50€
 
       %h2.description
         Description
       %p
-        Dark jacquard long skirt. It comprises three different pieces which can be worn in four different ways: 1/ as a mini skirt, keeping the upper part only; 2/ as a two different midi skirt, keeping the upper and medium or the lower parts; 3/ as a long skirt just above the ankles, keeping all three pieces together
+        Pale jacquard midi skirt. It comprises an upper part (which can be worn separately as a mini skirt) and a bottom part (to wear combined with the upper part only)
       %h2.composition
         Size
       %p
         Small <b />
+        Medium
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose<b />
+        34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose <b />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
       %p
-        1 Piece
+        1 Piece Small  <b />
+        1 Piece Medium
       %h2.shipping
         Shipping
       %p
