--- a/source/shop/fw1314/2-piece-top-jscuro.html.haml
+++ b/source/shop/fw1314/2-piece-top-jscuro.html.haml
@@ -7,29 +7,32 @@
     %div.right
       %h1.title
         %span
-          2-piece overalls/trousers
+          2-piece top
       %h2.price
         %span{:style=>"font-size: 24px"}
-          260€
+          287€
 
       %h2.description
         Description
       %p
-        Two-piece black overalls comprising a regular v-neck top and striped regular-waist trousers with a wide-cut leg. The top and the trousers are two separate pieces which can be worn both separately and combined into one dungarees
+        Two-piece dark jacquard top. The top comprises an upper part (which can be worn separately) and a bottom part (to wear combined with the upper part only).
+
       %h2.composition
         Size
       %p
-        Small <b />
+        X-Small <b />
+        Small
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        50% acrylic; 50% viscose <b />
-        Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
+        34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose <b />
+        Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry.
       %h2.availability
         Availability
       %p
-        1 Piece
+        1 Piece X-Small <b />
+        2 Pieces Small
       %h2.shipping
         Shipping
       %p
