--- a/source/shop/fw1314/parka-chiaro.html.haml
+++ b/source/shop/fw1314/parka-chiaro.html.haml
@@ -20,6 +20,8 @@
         Size
       %p
         X-Small <b />
+        Small <b />
+        Medium
         Fits true to size.
       %h2.composition
         Composition & Care instructions
@@ -30,7 +32,9 @@
       %h2.availability
         Availability
       %p
-        1 Piece
+        1 Piece X-Small
+        1 Piece Small <b />
+        1 Piece Medium
       %h2.shipping
         Shipping
       %p
