--- a/source/shop/fw1314/2-piece-coat-purple.html.haml
+++ b/source/shop/fw1314/2-piece-coat-purple.html.haml
@@ -20,7 +20,7 @@
         Size
       %p
         Small <b />
-        X-Small
+        X-Small <b />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
