--- a/source/shop/fw1314/2-piece-jacket-hood.html.haml
+++ b/source/shop/fw1314/2-piece-jacket-hood.html.haml
@@ -20,7 +20,7 @@
         Size
       %p
         Small <b />
-        X-Small
+        X-Small <b />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
@@ -32,7 +32,7 @@
         Availability
       %p
         1 Piece Small <b />
-        1 Piece X-Sall
+        1 Piece X-Small
 
       %h2.shipping
         Shipping
