--- a/source/shop/fw1314/2-piece-minidress.html.haml
+++ b/source/shop/fw1314/2-piece-minidress.html.haml
@@ -19,8 +19,8 @@
       %h2.composition
         Size
       %p
+        X-Small <b />
         Small <b />
-        X-Small
         Fits true to size.
       %h2.composition
         Composition & Care instructions
@@ -30,8 +30,9 @@
       %h2.availability
         Availability
       %p
-        1 Piece Small  <b />
-        1 Piece X-Small
+        2 Piece X-Small <b />
+        1 Piece Small
+
       %h2.shipping
         Shipping
       %p
