--- a/source/shop/fw1314/2-piece-skirt-pale.html.haml
+++ b/source/shop/fw1314/2-piece-skirt-pale.html.haml
@@ -20,7 +20,7 @@
         Size
       %p
         Small <b />
-        Medium
+        Medium  <b />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
