--- a/source/shop/fw1314/2-piece-top-jscuro.html.haml
+++ b/source/shop/fw1314/2-piece-top-jscuro.html.haml
@@ -21,7 +21,7 @@
         Size
       %p
         X-Small <b />
-        Small
+        Small  <b />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
