--- a/source/shop/fw1314/2-piece-top-jchiaro-collov.html.haml
+++ b/source/shop/fw1314/2-piece-top-jchiaro-collov.html.haml
@@ -20,7 +20,7 @@
         Size
       %p
         X-Small <b />
-        Small
+        Small <b />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
