--- a/source/partials/_header.haml
+++ b/source/partials/_header.haml
@@ -17,7 +17,7 @@
             %a#instagram-link{href:"http://flavialarocca.com#instagram-feed"}
               instagram
           %li
-            %a#stores-link{href:"/fw13-list.html"}
+            %a#stores-link{href:"/shop/fw13-list.html"}
               eshop
           %li
             %a#stores-link{href:"/stores.html"}
