--- a/source/shop/fw13-list.html.haml
+++ b/source/shop/fw13-list.html.haml
@@ -8,8 +8,8 @@
       %h2.title
         %a{href: "#"}
           %span
-            STRIPES-MANIA
-
+            Fall/Winter<br />
+            2013-2014
 
       .list
         %div
@@ -20,16 +20,8 @@
                 515€
               .bkgr
             .overlay
-            = image_tag "shop/list/fw13/small_lowfi/small_dress_righe_rosso_lowfi.jpg", :"data-src" => "../img/shop/list/fw13/small/small_dress_righe_rosso.jpg"
-        %div
-          %a{:href =>  "/shop/fw1314/2-piece-coat-purple.html"}
-            .info
-              %p
-                2-piece coat <br />
-                425€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/small_dress_righe_rosso_lowfi.jpg", :"data-src" => "../img/shop/list/fw13/small/small_dress_righe_rosso.jpg"
+            = image_tag "shop/list/fw13/small_lowfi/FW7-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW7-list.jpg"
+
         %div
           %a{:href =>  "/shop/fw1314/2-piece-coat-scuro.html"}
             .info
@@ -38,17 +30,170 @@
                 515€
               .bkgr
             .overlay
-            = image_tag "shop/list/fw13/small_lowfi/small_dress_righe_rosso_lowfi.jpg", :"data-src" => "../img/shop/list/fw13/small/small_dress_righe_rosso.jpg"
+            = image_tag "shop/list/fw13/small_lowfi/FW6-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW6-list.jpg"
         %div
           %a{:href =>  "/shop/fw1314/2-piece-jacket-hood.html"}
             .info
               %p
-                2-piece coat <br />
+                2-piece jacket w/ detacheble hood <br />
                 515€
               .bkgr
             .overlay
-            = image_tag "shop/list/fw13/small_lowfi/small_dress_righe_rosso_lowfi.jpg", :"data-src" => "../img/shop/list/fw13/small/small_dress_righe_rosso.jpg"
+            = image_tag "shop/list/fw13/small_lowfi/FW5-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW5-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/2-piece-minidress.html"}
+            .info
+              %p
+                2-piece minidress/top <br />
+                287€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW20-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW20-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/2-piece-skirt-black.html"}
+            .info
+              %p
+                2-piece skirt <br />
+                260€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW13-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW13-list.jpg"
 
+        %div
+          %a{:href =>  "/shop/fw1314/2-piece-skirt-white.html"}
+            .info
+              %p
+                2-piece skirt <br />
+                287€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW14-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW14-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/2-piece-top-jchiaro.html"}
+            .info
+              %p
+                2-piece top<br />
+                260€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW3-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW3-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/2-piece-coat-purple.html"}
+            .info
+              %p
+                2-piece coat <br />
+                425€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW15-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW15-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/2-piece-top-jchiaro-collov.html"}
+            .info
+              %p
+                2-piece top<br />
+                312,50€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW4-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW4-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/2-piece-top-jscuro.html"}
+            .info
+              %p
+                2-piece top<br />
+                287€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW1-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW1-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/2-piece-top-scuronero.html"}
+            .info
+              %p
+                2-piece top<br />
+                287€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW2-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW2-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/3-lenght-dress-purple.html"}
+            .info
+              %p
+                3-lenght dress<br />
+                225€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW16-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW16-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/3-piece-skirt-dark.html"}
+            .info
+              %p
+                3-piece skirt dark<br />
+                487,50€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW11-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW11-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/2-piece-skirt-pale.html"}
+            .info
+              %p
+                2-piece skirt <br />
+                287,50€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW12-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW12-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/overall-black.html"}
+            .info
+              %p
+                2-piece overalls/trousers<br />
+                260€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW17-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW17-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/overall-purple.html"}
+            .info
+              %p
+                2-piece overalls/trousers<br />
+                260€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW18-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW18-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/overall-white.html"}
+            .info
+              %p
+                2-piece overalls/trousers<br />
+                260€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW19-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW19-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/parka-chiaro.html"}
+            .info
+              %p
+                double-faced hooded parka<br />
+                487,50€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW8-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW8-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/parka-scuro.html"}
+            .info
+              %p
+                double-faced hooded parka<br />
+                487,50€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW9-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW9-list.jpg"
+        %div
+          %a{:href =>  "/shop/fw1314/parka-wool.html"}
+            .info
+              %p
+                double-faced hooded parka<br />
+                450€
+              .bkgr
+            .overlay
+            = image_tag "shop/list/fw13/small_lowfi/FW10-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW10-list.jpg"
   = partial "partials/footer"
 
 
