--- a/source/shop/fw1314/2-piece-coat-scuro.html.haml
+++ b/source/shop/fw1314/2-piece-coat-scuro.html.haml
@@ -39,7 +39,7 @@
         To EU & rest of the world: place your order. We will hold it and contact you with the shipping/delivery and price details according to your country of destination.
 
       %p
-      %button{"data-celery" => "3-dress-denim"} BUY NOW
+      %button{"data-celery" => "2-piece-coat-scuro"} BUY NOW
       %script{src: "https://www.trycelery.com/js/celery.js", type: "text/javascript"}
   = partial "partials/footer"
 
