--- a/source/shop/fw13-list.html.haml
+++ b/source/shop/fw13-list.html.haml
@@ -35,7 +35,7 @@
           %a{:href =>  "/shop/fw1314/2-piece-jacket-hood.html"}
             .info
               %p
-                2-piece jacket w/ detacheble hood <br />
+                2-piece jacket w/ detachable hood <br />
                 515€
               .bkgr
             .overlay
