--- a/source/shop/fw1314/parka-wool.html.haml
+++ b/source/shop/fw1314/parka-wool.html.haml
@@ -18,7 +18,7 @@
       %h2.description
         Description
       %p
-        This reversible parka consists of a wool exterior in light cream shade and an interior black face in PVC. It features a large hood in light blue PVC, a drawstring waist and hem, and two hip pockets
+        This reversible parka consists of a wool exterior in light cream shade and an interior black face in PVC. It features a large PVC hood, a drawstring waist and hem, and two hip pockets
       %h2.composition
         Size
       %p
