--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -8,6 +8,9 @@ $grigio: #D3D6DD
 $dark-grey: #9b9595
 $giallo: #FDFAE6
 $light_blue: #CCF1F2
+
+.hidden
+  display: none
 .page
   +clearfix
   +container($total-columns, $break-1, $break-2,$break-3)
