--- a/source/press.html.haml
+++ b/source/press.html.haml
@@ -10,68 +10,33 @@
             PRESS COVERAGE
       .list
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/01.jpg", title: "Lorem ipsum dolor sit amet"}
-            .info
-              %p
-                vogue <br />
-                <span style= "text-decoration: line-through; font-size: 12px">275€</span><br />
-                55€
-              .bkgr
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/BAMBI_MAGAZINE.JPG", title: "Lorem ipsum dolor sit amet"}
             .overlay
-            = image_tag "press/lowres/01.jpg", :"data-src" => "../img/press/small/01.jpg", :width => "134"
+            = image_tag "press/lowres/1_cover.jpg", :"data-src" => "../img/press/small/1_cover.jpg", :width => "134"
+          .hidden
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/BDHQ_BLOG.jpg", title: "Lorem ipsum dolor sit amet"}
+        %div
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/2_cover.jpg", title: "Etiam quis mi eu elit temp"}
+            .overlay
+            = image_tag "press/lowres/2_cover.jpg", :"data-src" => "../img/press/small/2_cover.jpg" , :width => "134"
+        %div
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/3_cover.jpg", title: "Etiam quis mi eu elit temp"}
+            .overlay
+            = image_tag "press/lowres/3_cover.jpg", :"data-src" => "../img/press/small/3_cover.jpg" , :width => "134"
+        %div
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/4_cover.jpg", title: "Lorem ipsum dolor sit amet"}
+            .overlay
+            = image_tag "press/lowres/4_cover.jpg", :"data-src" => "../img/press/small/4_cover.jpg", :width => "134"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/01.jpg", title: "Etiam quis mi eu elit temp"}
-            .info
-              %p
-                vogue <br />
-                <span style= "text-decoration: line-through; font-size: 12px">275€</span><br />
-                55€
-              .bkgr
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/5_cover.jpg", title: "Etiam quis mi eu elit temp"}
             .overlay
-            = image_tag "press/lowres/01.jpg", :"data-src" => "../img/press/small/01.jpg" , :width => "134"
+            = image_tag "press/lowres/5_cover.jpg", :"data-src" => "../img/press/small/5_cover.jpg" , :width => "134"
         %div
-          %a{:href => "#"}
-            .info
-              %p
-                vogue <br />
-                <span style= "text-decoration: line-through; font-size: 12px">275€</span><br />
-                55€
-              .bkgr
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/6_cover.jpg", title: "Etiam quis mi eu elit temp"}
             .overlay
-            = image_tag "press/lowres/01.jpg", :"data-src" => "../img/press/small/01.jpg" , :width => "134"
+            = image_tag "press/lowres/6_cover.jpg", :"data-src" => "../img/press/small/6_cover.jpg" , :width => "134"
 
-        %div
-          %a{:href => "#"}
-            .info
-              %p
-                vogue <br />
-                <span style= "text-decoration: line-through; font-size: 12px">275€</span><br />
-                55€
-              .bkgr
-            .overlay
-            = image_tag "press/lowres/01.jpg", :"data-src" => "../img/press/small/01.jpg"  , :width => "134"
-        %div
-          %a{:href => "#"}
-            .info
-              %p
-                vogue <br />
-                <span style= "text-decoration: line-through; font-size: 12px">275€</span><br />
-                55€
-              .bkgr
-            .overlay
-            = image_tag "press/lowres/01.jpg", :"data-src" => "../img/press/small/01.jpg"  , :width => "134"
-
-        %div
-          %a{:href => "#"}
-            .info
-              %p
-                vogue <br />
-                <span style= "text-decoration: line-through; font-size: 12px">275€</span><br />
-                55€
-              .bkgr
-            .overlay
-            = image_tag "press/lowres/01.jpg", :"data-src" => "../img/press/small/01.jpg"   , :width => "134"
   = partial "partials/footer"
 
 
