--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -8,7 +8,8 @@ $grigio: #D3D6DD
 $dark-grey: #9b9595
 $giallo: #FDFAE6
 $light_blue: #CCF1F2
-
+img
+  vertical-align: middle
 .hidden
   display: none
 .page
