--- a/source/press.html.haml
+++ b/source/press.html.haml
@@ -10,171 +10,192 @@
             PRESS COVERAGE
       .list
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/1.JPG", title: "Lorem ipsum dolor sit amet"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/1.JPG", title: "Elle Belgique - March 2012"}
             .overlay
             = image_tag "press/lowres/asvof_cover.jpg", :"data-src" => "../img/press/small/1_cover.jpg", :width => "134"  , :height => "171"
-          .hidden
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/1.jpg", title: "Lorem ipsum dolor sit amet"}
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/2.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/2.jpg", title: "Cosmopolitan Italia - July 2012"}
             .overlay
             = image_tag "press/lowres/2_cover.jpg", :"data-src" => "../img/press/small/2_cover.jpg" , :width => "134" , :height => "171"
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/3.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/3.jpg", title: "Cosmopolitan Russia - December 2012"}
             .overlay
             = image_tag "press/lowres/3_cover.jpg", :"data-src" => "../img/press/small/3_cover.jpg" , :width => "134" , :height => "171"
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/4.jpg", title: "Lorem ipsum dolor sit amet"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/4.jpg", title: "Cosmopolitan Italia - January 2013"}
             .overlay
             = image_tag "press/lowres/4_cover.jpg", :"data-src" => "../img/press/small/4_cover.jpg", :width => "134" , :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/5.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/5.jpg", title: "Kult magazine - January 2013"}
             .overlay
             = image_tag "press/lowres/5_cover.jpg", :"data-src" => "../img/press/small/5_cover.jpg" , :width => "134" , :height => "171"
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/6.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/6.jpg", title: "Phit magazine - January 2013"}
             .overlay
             = image_tag "press/lowres/6_cover.jpg", :"data-src" => "../img/press/small/6_cover.jpg" , :width => "134"  , :height => "171"
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/7.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/7.jpg", title: "Amica Italia - February 2013"}
             .overlay
             = image_tag "press/lowres/7_cover.jpg", :"data-src" => "../img/press/small/7_cover.jpg" , :width => "134", :height => "171"
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/8.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/8.jpg", title: "Vogue Italia - February 2013"}
             .overlay
             = image_tag "press/lowres/8_cover.jpg", :"data-src" => "../img/press/small/8_cover.jpg" , :width => "134", :height => "171"
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/9.jpg", title: "Lorem ipsum dolor sit amet"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/9.jpg", title: "Glamour Italia - March 2013"}
             .overlay
             = image_tag "press/lowres/9_cover.jpg", :"data-src" => "../img/press/small/9_cover.jpg", :width => "134", :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/10.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/10.jpg", title: "Cosmopolitan Italia - April 2013"}
             .overlay
             = image_tag "press/lowres/10_cover.jpg", :"data-src" => "../img/press/small/10_cover.jpg" , :width => "134", :height => "171"
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/11a.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/gla.jpg", title: "Gla magazine Taiwan - April 2013"}
+            .overlay
+            = image_tag "press/lowres/gla_cover.jpg", :"data-src" => "../img/press/small/gla_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/11a.jpg", title: "Rendez-vous de la mode - June 2013"}
             .overlay
             = image_tag "press/lowres/11_cover.jpg", :"data-src" => "../img/press/small/11_cover.jpg" , :width => "134", :height => "171"
           .hidden
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/11b.jpg", title: "Lorem ipsum dolor sit amet"}
-
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/11b.jpg", title: "Rendez-vous de la mode - June 2013"}
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/12a.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/cake_june_a.jpg", title: "Cake magazine - June 2013"}
+            .overlay
+            = image_tag "press/lowres/cake_une.jpg", :"data-src" => "../img/press/small/cake_june.jpg" , :width => "134", :height => "171"
+        %div
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/12a.jpg", title: "Maison Decor - July 2013"}
             .overlay
             = image_tag "press/lowres/12_cover.jpg", :"data-src" => "../img/press/small/12_cover.jpg" , :width => "134", :height => "171"
           .hidden
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/12b.jpg", title: "Lorem ipsum dolor sit amet"}
-          .hidden
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/12c.jpg", title: "Lorem ipsum dolor sit amet"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/12b.jpg", title: "Maison Decor - July 2013"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/12c.jpg", title: "Maison Decor - July 2013"}
 
 
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/13.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/13.jpg", title: "Vogue Italia - July 2013"}
             .overlay
             = image_tag "press/lowres/13_cover.jpg", :"data-src" => "../img/press/small/13_cover.jpg" , :width => "134", :height => "171"
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/14.jpg", title: "Lorem ipsum dolor sit amet"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/14a.jpg", title: "Vogue Italia - August 2013"}
             .overlay
             = image_tag "press/lowres/14_cover.jpg", :"data-src" => "../img/press/small/14_cover.jpg", :width => "134", :height => "171"
+          .hidden
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/14b.jpg", title: "Vogue Italia - August 2013"}
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/15.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/15.jpg", title: "Vogue Italia - August 2013"}
             .overlay
             = image_tag "press/lowres/15_cover.jpg", :"data-src" => "../img/press/small/15_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/17.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/17.jpg", title: "Marie Claire - September 2013"}
             .overlay
             = image_tag "press/lowres/17_cover.jpg", :"data-src" => "../img/press/small/17_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/18.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/18a.jpg", title: "Vogue Italia - September 2013"}
             .overlay
             = image_tag "press/lowres/18_cover.jpg", :"data-src" => "../img/press/small/18_cover.jpg" , :width => "134", :height => "171"
-
+          .hidden
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/18b.jpg", title: "Vogue Italia - September 2013"}
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/19.jpg", title: "Etiam quis mi eu elit temp"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/vogue_talents.jpg", title: "Vogue Talents - Semptember 2013"}
+            .overlay
+            = image_tag "press/lowres/vogue_talents_cover.jpg", :"data-src" => "../img/press/small/vogue_talents_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/19.jpg", title: "Vogue Accessory - Semptember 2013"}
             .overlay
             = image_tag "press/lowres/19_cover.jpg", :"data-src" => "../img/press/small/19_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/20a.jpg", title: "Edelwiss - October 2013"}
+            .overlay
+            = image_tag "press/lowres/20_cover.jpg", :"data-src" => "../img/press/small/20_cover.jpg" , :width => "134", :height => "171"
+          .hidden
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/20b.jpg", title: "Edelwiss - October 2013"}
+        %div
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/21.jpg", title: "Vogue Italia - November 2013"}
+            .overlay
+            = image_tag "press/lowres/21_cover.jpg", :"data-src" => "../img/press/small/21_cover.jpg" , :width => "134", :height => "171"
 
 
 
 
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/asvof.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{ href: "../img/press/large/asvof.jpg"}
             .overlay
             = image_tag "press/lowres/asvof_cover.jpg", :"data-src" => "../img/press/small/asvof_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/bobos.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/bobos.jpg"}
             .overlay
             = image_tag "press/lowres/bobos_cover.jpg", :"data-src" => "../img/press/small/bobos_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/cake.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/cake.jpg"}
             .overlay
             = image_tag "press/lowres/cake_cover.jpg", :"data-src" => "../img/press/small/cake_cover.jpg" , :width => "134", :height => "171"
 
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/elle_it.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/elle_it.jpg"}
             .overlay
             = image_tag "press/lowres/elle_it_cover.jpg", :"data-src" => "../img/press/small/elle_it_cover.jpg" , :width => "134", :height => "171"
 
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/frizzifrizzi.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/frizzifrizzi.jpg"}
             .overlay
             = image_tag "press/lowres/frizzifrizzi_cover.jpg", :"data-src" => "../img/press/small/frizzifrizzi_cover.jpg" , :width => "134", :height => "171"
 
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/iodonna.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/iodonna.jpg"}
             .overlay
             = image_tag "press/lowres/iodonna_cover.jpg", :"data-src" => "../img/press/small/iodonna_cover.jpg" , :width => "134", :height => "171"
 
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/marieclaire_it.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/marieclaire_it.jpg"}
             .overlay
             = image_tag "press/lowres/marieclaire_it_cover.jpg", :"data-src" => "../img/press/small/marieclaire_it_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/mffashion.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/mffashion.jpg"}
             .overlay
             = image_tag "press/lowres/mffashion_cover.jpg", :"data-src" => "../img/press/small/mffashion_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/papercut.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/papercut.jpg"}
             .overlay
             = image_tag "press/lowres/papercut_cover.jpg", :"data-src" => "../img/press/small/papercut_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/marieclaire_it.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/marieclaire_it.jpg"}
             .overlay
             = image_tag "press/lowres/marieclaire_it_cover.jpg", :"data-src" => "../img/press/small/marieclaire_it_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/pitti.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/pitti.jpg"}
             .overlay
             = image_tag "press/lowres/pitti_cover.jpg", :"data-src" => "../img/press/small/pitti_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/vanity_it.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/vanity_it.jpg"}
             .overlay
             = image_tag "press/lowres/vanity_it_cover.jpg", :"data-src" => "../img/press/small/vanity_it_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/vogue_brasile.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/vogue_brasile.jpg"}
             .overlay
             = image_tag "press/lowres/vogue_brasile_cover.jpg", :"data-src" => "../img/press/small/vogue_brasile_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/vogue_it_cover.jpg", title: "Etiam quis mi eu elit temp"}
+          %a{href: "../img/press/large/vogue_it_cover.jpg"}
             .overlay
             = image_tag "press/lowres/vogue_it_cover.jpg", :"data-src" => "../img/press/small/vogue_it_cover.jpg" , :width => "134", :height => "171"
 
