--- a/source/collections/fw13.html.haml
+++ b/source/collections/fw13.html.haml
@@ -19,7 +19,7 @@
             = image_tag "collections/lowres/FL2.jpg", :"data-src" => "../img/collections/small/FL2.jpg"
           %p.desc 02
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/collections/large/FL3.jpg", title: "DRESS &harr; SKIRT"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/collections/large/FL3.jpg", title: "DRESS &harr; TOP"}
             = image_tag "collections/lowres/FL3.jpg", :"data-src" => "../img/collections/small/FL3.jpg"
           %p.desc 03
         %div
