--- a/source/press.html.haml
+++ b/source/press.html.haml
@@ -10,7 +10,7 @@
             PRESS COVERAGE
       .list
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/1.JPG", title: "Elle Belgique - March 2012"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/1.jpg", title: "Elle Belgique - March 2012"}
             .overlay
             = image_tag "press/lowres/asvof_cover.jpg", :"data-src" => "../img/press/small/1_cover.jpg", :width => "134"  , :height => "171"
         %div
@@ -62,9 +62,21 @@
           .hidden
             %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/11b.jpg", title: "Rendez-vous de la mode - June 2013"}
         %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/cake_june_a.jpg", title: "Cake magazine - June 2013"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/cake.jpg", title: "Cake magazine - June 2013"}
             .overlay
-            = image_tag "press/lowres/cake_une.jpg", :"data-src" => "../img/press/small/cake_june.jpg" , :width => "134", :height => "171"
+            = image_tag "press/lowres/cake_cover.jpg", :"data-src" => "../img/press/small/cake_cover.jpg" , :width => "134", :height => "171"
+
+
+        %div
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/cake_9_a.jpg", title: "Cake magazine - ISSUE 9"}
+            .overlay
+            = image_tag "press/lowres/cake_9_cover.jpg", :"data-src" => "../img/press/small/cake_9_cover.jpg" , :width => "134", :height => "171"
+
+          .hidden
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/cake_9_b.jpg", title: "Cake magazine - ISSUE 9"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/cake_9_c.jpg", title: "Cake magazine - ISSUE 9"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/cake_9_d.jpg", title: "Cake magazine - ISSUE 9"}
+
         %div
           %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/12a.jpg", title: "Maison Decor - July 2013"}
             .overlay
@@ -126,35 +138,66 @@
 
 
         %div
-          %a{ href: "../img/press/large/asvof.jpg"}
+          %a{ href: "http://dianepernet.typepad.com/diane/2012/04/flavialarocca-fall-winter-20122013.html"}
             .overlay
             = image_tag "press/lowres/asvof_cover.jpg", :"data-src" => "../img/press/small/asvof_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a{href: "../img/press/large/bobos.jpg"}
+          %a{href: "http://www.bobos.it/flavialarocca-in-the-mix_63344.htm"}
             .overlay
             = image_tag "press/lowres/bobos_cover.jpg", :"data-src" => "../img/press/small/bobos_cover.jpg" , :width => "134", :height => "171"
 
+
         %div
-          %a{href: "../img/press/large/cake.jpg"}
+          %a{href: "http://www.bobos.it/glam-e-green-la-metamorfosi-di-flavia-larocca_39838.htm"}
             .overlay
-            = image_tag "press/lowres/cake_cover.jpg", :"data-src" => "../img/press/small/cake_cover.jpg" , :width => "134", :height => "171"
+            = image_tag "press/lowres/bobos_cover.jpg", :"data-src" => "../img/press/small/bobos_cover.jpg" , :width => "134", :height => "171"
 
 
         %div
-          %a{href: "../img/press/large/elle_it.jpg"}
+          %a{href: "http://www.bobos.it/stranger-in-milan_71653.htm"}
+            .overlay
+            = image_tag "press/lowres/bobos_cover.jpg", :"data-src" => "../img/press/small/bobos_cover.jpg" , :width => "134", :height => "171"
+
+
+        %div
+          %a{href: "http://www.bobos.it/shutter-release-i-spy-with-my-eye_54679.htm#respond"}
+            .overlay
+            = image_tag "press/lowres/bobos_cover.jpg", :"data-src" => "../img/press/small/bobos_cover.jpg" , :width => "134", :height => "171"
+
+
+        %div
+          %a{href: "http://vestalmag.com/Blue%20My%20Mind.php"}
+            .overlay
+            = image_tag "press/lowres/vestal_cover.jpg", :"data-src" => "../img/press/small/vestal_cover.jpg" , :width => "134", :height => "171"
+
+
+
+        %div
+          %a{href: "http://www.elle.it/Moda/Sfilate/La-collezione-Flavia-La-Rocca-per-l-AI-2013-14-raccontata-dalla-stilista-incontrata-a-Parigi-alla-fiera-Capsule-nella-sezione-IT.Talents"}
             .overlay
             = image_tag "press/lowres/elle_it_cover.jpg", :"data-src" => "../img/press/small/elle_it_cover.jpg" , :width => "134", :height => "171"
 
 
         %div
-          %a{href: "../img/press/large/frizzifrizzi.jpg"}
+          %a{href: "http://www.elle.it/Moda/Sfilate/Altaroma-Bring-Africa-Rome-moda-sfilate-Stella-Jean-Potenier-Roth-Flavia-La-Rocca-Arthur-Arbesser"}
+            .overlay
+            = image_tag "press/lowres/elle_it_cover.jpg", :"data-src" => "../img/press/small/elle_it_cover.jpg" , :width => "134", :height => "171"
+
+
+        %div
+          %a{href: "http://www.frizzifrizzi.it/2013/04/12/flavialarocca-ss2013/"}
+            .overlay
+            = image_tag "press/lowres/frizzifrizzi_cover.jpg", :"data-src" => "../img/press/small/frizzifrizzi_cover.jpg" , :width => "134", :height => "171"
+
+        %div
+          %a{href: "http://www.frizzifrizzi.it/2013/10/10/flavialarocca-fw201314/"}
             .overlay
             = image_tag "press/lowres/frizzifrizzi_cover.jpg", :"data-src" => "../img/press/small/frizzifrizzi_cover.jpg" , :width => "134", :height => "171"
 
 
         %div
-          %a{href: "../img/press/large/iodonna.jpg"}
+          %a{href: "http://blog.iodonna.it/iovorrei-ioposso/2012/10/17/un-abito-che-si-fa-in-due-tre-o-anche-quattro/"}
             .overlay
             = image_tag "press/lowres/iodonna_cover.jpg", :"data-src" => "../img/press/small/iodonna_cover.jpg" , :width => "134", :height => "171"
 
@@ -165,7 +208,7 @@
             = image_tag "press/lowres/marieclaire_it_cover.jpg", :"data-src" => "../img/press/small/marieclaire_it_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a{href: "../img/press/large/mffashion.jpg"}
+          %a{href: "http://www.mffashion.com/it/archivio/2013/07/10/a-roma-tornano-i-buyer"}
             .overlay
             = image_tag "press/lowres/mffashion_cover.jpg", :"data-src" => "../img/press/small/mffashion_cover.jpg" , :width => "134", :height => "171"
 
@@ -185,22 +228,90 @@
             = image_tag "press/lowres/pitti_cover.jpg", :"data-src" => "../img/press/small/pitti_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a{href: "../img/press/large/vanity_it.jpg"}
+          %a{href: "http://www.vanityfair.it/fashion/news/13/09/16/visa-per-la-vogue-fashion's-night-out"}
+            .overlay
+            = image_tag "press/lowres/vanity_it_cover.jpg", :"data-src" => "../img/press/small/vanity_it_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.vanityfair.it/people/italia/2011/11/15/malika-ayane-intervista-vanity-fair-foto-matrimonio"}
             .overlay
             = image_tag "press/lowres/vanity_it_cover.jpg", :"data-src" => "../img/press/small/vanity_it_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a{href: "../img/press/large/vogue_brasile.jpg"}
+          %a{href: "http://revista.vogue.globo.com/paristododia/2013/05/vogue-italia-e-chic-outlet-se-unem-para-apoiar-jovens-estilistas/"}
             .overlay
             = image_tag "press/lowres/vogue_brasile_cover.jpg", :"data-src" => "../img/press/small/vogue_brasile_cover.jpg" , :width => "134", :height => "171"
 
         %div
-          %a{href: "../img/press/large/vogue_it_cover.jpg"}
+          %a{href: "http://revista.vogue.globo.com/paristododia/2013/07/altaroma-dia-2/"}
+            .overlay
+            = image_tag "press/lowres/vogue_brasile_cover.jpg", :"data-src" => "../img/press/small/vogue_brasile_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.vogue.it/talents/nuovi-talenti/2013/01/flavia-la-rocca"}
             .overlay
             = image_tag "press/lowres/vogue_it_cover.jpg", :"data-src" => "../img/press/small/vogue_it_cover.jpg" , :width => "134", :height => "171"
 
+        %div
+          %a{href: "http://www.vogue.it/talents/news/2013/11/talents-on-instagram"}
+            .overlay
+            = image_tag "press/lowres/vogue_it_cover.jpg", :"data-src" => "../img/press/small/vogue_it_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.vogue.it/en/talents/news/2013/05/the-talent-store-in-fidenza#ad-image3"}
+            .overlay
+            = image_tag "press/lowres/vogue_it_cover.jpg", :"data-src" => "../img/press/small/vogue_it_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.vogue.it/vogue-tv/talents/nuovi-talenti/Super1ok/player"}
+            .overlay
+            = image_tag "press/lowres/vogue_it_cover.jpg", :"data-src" => "../img/press/small/vogue_it_cover.jpg" , :width => "134", :height => "171"
+
+        %div
+          %a{href: "http://vfno2013.vogue.it/milano/iniziative-speciali/2013/07/visa-e-vfno"}
+            .overlay
+            = image_tag "press/lowres/vogue_it_cover.jpg", :"data-src" => "../img/press/small/vogue_it_cover.jpg" , :width => "134", :height => "171"
+
+        %div
+          %a{href: "http://www.glamour.it/news/2013/02/26/super-pitti"}
+            .overlay
+            = image_tag "press/lowres/glamour_it_cover.jpg", :"data-src" => "../img/press/small/glamour_it_cover.jpg" , :width => "134", :height => "171"
+
+        %div
+          %a{href: "http://www.style.it/moda/news/2013/05/28/milla-jovovich-plus-talent-store.aspx#?refresh_ce"}
+            .overlay
+            = image_tag "press/lowres/style_it_cover.jpg", :"data-src" => "../img/press/small/style_it_cover.jpg" , :width => "134", :height => "171"
+
+        %div
+          %a{href: "http://movingforward.style.it/2013/09/12/stilisti-emergenti-flavia-la-rocca/"}
+            .overlay
+            = image_tag "press/lowres/style_it_cover.jpg", :"data-src" => "../img/press/small/style_it_cover.jpg" , :width => "134", :height => "171"
 
 
+        %div
+          %a{href: "http://www.vanityfair.it/fashion/news/13/09/16/visa-per-la-vogue-fashion's-night-out"}
+            .overlay
+            = image_tag "press/lowres/vanity_it_cover.jpg", :"data-src" => "../img/press/small/vanity_it_cover.jpg" , :width => "134", :height => "171"
+
+
+        %div
+          %a{href: "http://www.sickymagazine.com/teenage-kicks/"}
+            .overlay
+            = image_tag "press/lowres/sicky_cover.jpg", :"data-src" => "../img/press/small/sicky_cover.jpg" , :width => "134", :height => "171"
+
+        %div
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_a.jpg", title: "Revista Codigo - September 2013"}
+            .overlay
+            = image_tag "press/lowres/codigo_cover.jpg", :"data-src" => "../img/press/small/codigo_cover.jpg" , :width => "134", :height => "171"
+          .hidden
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_b.jpg", title: "Revista Codigo - September 2013"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_e.jpg", title: "Revista Codigo - September 2013"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_f.jpg", title: "Revista Codigo - September 2013"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_g.jpg", title: "Revista Codigo - September 2013"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_h.jpg", title: "Revista Codigo - September 2013"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_i.jpg", title: "Revista Codigo - September 2013"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_l.jpg", title: "Revista Codigo - September 2013"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_m.jpg", title: "Revista Codigo - September 2013"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_n.jpg", title: "Revista Codigo - September 2013"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_o.jpg", title: "Revista Codigo - September 2013"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_p.jpg", title: "Revista Codigo - September 2013"}
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_q.jpg", title: "Revista Codigo - September 2013"}
 
 
 
