--- a/source/partials/_header.haml
+++ b/source/partials/_header.haml
@@ -26,5 +26,8 @@
             %a#projects-link{href:"/projects.html"}
               projects
           %li
+            %a#presskit-link{href:"/press.html"}
+              press
+          %li
             %a#presskit-link{href:"/presskit/presskit.html"}
               press kit
