--- a/source/projects.html.haml
+++ b/source/projects.html.haml
@@ -2,6 +2,17 @@
   = partial "partials/header"
   = partial "partials/vfno"
 
+  %h2.title
+    %a{href: "http://vfno2013.vogue.it/milano/iniziative-speciali/2013/07/visa-e-vfno"}
+    .color-box
+      = image_tag "flr_vfno_pics.jpg",:width => "940"
+
+  %h2.title
+    .color-box
+      = image_tag "flr_fidenza_pics.jpg" ,:width => "940"
+
+
   = partial "partials/footer"
+
 
 = javascript_include_tag 'main'
