--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -36,6 +36,13 @@ img
     +span-columns(7,7)
     background-color: $light-blue
     margin-left: 0
+  #people-list
+    +span-columns(7,7)
+    background-color: $giallo
+    margin-left: 0
+    img
+      width: 293px
+      height: auto
   #stripesmania-list
     +span-columns(7,7)
     background-color: $giallo
