--- a/source/shop/fw1314/2-piece-top-jchiaro-collov.html.haml
+++ b/source/shop/fw1314/2-piece-top-jchiaro-collov.html.haml
@@ -18,7 +18,7 @@
       %h2.description
         Description
       %p
-        Two-piece pale jacquard top. The top comprises an upper part (which can be worn separately, with or without the collar) and a single black waist-band at the bottom (to wear combined with the upper part only)
+        Two-piece pale jacquard top. The top comprises an upper part (which can be worn separately, with or without the collar) and a waist-band at the bottom (to wear combined with the upper part only)
       %h2.composition
         Size
       %p
